# CryptoZoid-gd

./: Cargo.toml  README.md
.github/workflows/: build.yml
godot/: test_crypto_zoid.gd
godot/addons/crypto_zoid/: CryptoZoid.gdextension  plugin.cfg
src/: lib.rs
